6-Commit [viernes_19-06-2015] Nueva distribución en el ménu y en la forma de acceder al sistema.

--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-historia.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-historia.xhtml
@@ -43,7 +43,7 @@
             <h:outputText value="Fecha de cierre: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Fecha de liquidación: " />
+            <h:outputText value="Fecha de liquidación: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
 
         </h:panelGrid>
