--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
@@ -25,7 +25,7 @@
             <h:outputText value="Fecha de creación: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Fecha de inicio de actividades: " />
+            <h:outputText value="Fecha de inicio de actividades: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Tipo de novedad " styleClass="etiquetaFormulario"/>
@@ -41,13 +41,13 @@
                 <f:selectItem itemLabel="Escisión parcial" itemValue="Escisión parcial" />
             </p:selectOneMenu>
 
-            <h:outputText value="Fecha de novedad: " />
+            <h:outputText value="Fecha de novedad: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="NIT de la unidad legal involucrada: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Fecha de cierre de actividades: " />
+            <h:outputText value="Fecha de cierre de actividades: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
         </h:panelGrid>
     </p:panel>
