--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -6,13 +6,15 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h3 style="text-align: center;">REPORTE DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
+                <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
                 <h:form style="height: 88%;" >
-                    <p:commandButton value="Generar reporte" update="@all"
+                    <p:commandButton id="btnGenerarReporte" value="Generar reporte" update="@form"
                                      actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.grupoEmpresarial.path'], nerv['reporte.grupoEmpresarial.archivo'])}"/>
-                    <p:outputPanel deferred="true" style="width: 100%; height: 100%;">
-                        <p:media value="#{MbReporteGrupoEmpresa.contenido}" width="100%" height="100%" player="pdf"/>
-                    </p:outputPanel>
+                    <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/>
+                    <p:blockUI block="@form" trigger="btnGenerarReporte" >
+                        Generando reporte...<br />
+                        <p:graphicImage name="imagen/ajax-loading.gif"/>
+                    </p:blockUI>
                 </h:form>
             </ui:define>
         </ui:composition>
