--- a/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
@@ -9,9 +9,10 @@
             <center>
                 <!--h:outputText value="#{nerv['header.title']}" /--> 
                 <div>
-                    <!--p:commandButton value="Login" icon="ui-icon-extlink" actionListener="#{dfView.visualizarVentanaParametrizada('/interfaz/usuario/ventana/vta-acceso-sistema',true,true,false,130,320)}"/-->
-                    <p:outputLabel value="Bienvenido, #{MbLogin.usuarioLogueado.nombres}" style="display: block; width: 100%; text-align: right;"
-                                   rendered="#{MbLogin.loggedIn}"/>
+                    <!--p:commandButton value="Login" icon="ui-icon-extlink" actionListener="#{dfView.visualizarVentanaParametrizada('/interfaz/usuario/ventana/vta-acceso-sistema',true,true,false,130,320)}"/>
+                    <p:commandButton value="Login" icon="ui-icon-extlink" actionListener="#{dfView.visualizarVentana('/interfaz/usuario/ventana/vta-acceso-sistema')}"/-->
+                    <p:outputLabel value="Bienvenid@, #{MbLogin.usuarioLogueado.nombres}" rendered="#{MbLogin.loggedIn}" 
+                                   style="display: block; width: 100%; text-align: right;"/>
                 </div>
             </center>
         </ui:composition>
