--- a/GrupoEmpresarial-war/web/welcome.xhtml
+++ b/GrupoEmpresarial-war/web/welcome.xhtml
@@ -1,53 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:lista="http://java.sun.com/jsf/composite/componente/lista">
-
-    <f:view contentType="text/html">
-        <h:head>
-            <f:facet name="first">
-                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <h:outputStylesheet library="css" name="general.css" />
-                <h:outputStylesheet library="css" name="componentes.css" />
-                <title>Practica Componentes</title>
-            </f:facet>
-        </h:head>
-
-        <h:body>
-
-            <p:layout fullPage="true">
-
-                <p:layoutUnit position="north" size="100" resizable="true" closable="true" collapsible="true">
-                    <ui:include src="interfaz/usuario/componente/cpt-acceso-sistema.xhtml"/>
-                </p:layoutUnit>
-
-                <p:layoutUnit position="west" size="200" header="Ménu" collapsible="true">
-                    <p:menu>
-                        <p:submenu label="Recursos">
-                            <p:menuitem value="Administrar Usuario" url="interfaz/usuario/itz-administrar-usuario.xhtml" />
-                        </p:submenu>
-
-                    </p:menu>
-                </p:layoutUnit>
-
-                <p:layoutUnit position="center">
-                    <h:form>
-                        <p:growl id="growl" life="2000" showDetail="true" sticky="true"/>
-                        <lista:unica-seleccion label="Lista frutas:" bean="#{practica.cboCarnes}" habilitarTest="true"/>
-                        <p:commandButton value="Validar Datos" actionListener="#{practica.consultarDato()}" update="growl"/>
-                    </h:form>
-                </p:layoutUnit>
-
-                <p:layoutUnit position="south" size="50" closable="true" collapsible="true">
-                    Pie Pagina
-                </p:layoutUnit>
-                
-            </p:layout>
-
-        </h:body>
-
-    </f:view>
+      xmlns:ui="http://java.sun.com/jsf/facelets">
+    <h:body>   
+        <ui:composition>
+            <p:outputLabel value="Linea de Investigación Grupos Empresariales" styleClass="titulo-center-h2" style="color: #B6014C;"/>
+            <p>Proyecto de linea de investigación para el DANE sobre los grupos empresariales en Colombia.</p>
+        </ui:composition>
+    </h:body>
 </html>
