--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
@@ -8,6 +8,11 @@
             <ui:define name="content">
                 <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DE LOS ESTABLECIMIENTOS</h3>
                 <h:form style="height: 88%;" >
+
+                   <p:commandButton value="Descargar" 
+                                    actionListener="#{MbReporteGrupoEmpresa.descargarArchivo}"/>
+
+                    
                     <p:commandButton id="btnGenerarReporte" value="Generar reporte" update="@form"
                                      actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.grupoEmpresarial.path'], nerv['reporte.grupoEmpresarial.archivo'])}"/>
                     <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/>
