--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
@@ -9,7 +9,7 @@
                 <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DE LAS UNIDADES LEGALES</h3>
                 <h:form style="height: 88%;" >
                     <p:commandButton id="btnGenerarReporte" value="Generar reporte" update="@form"
-                                     actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.grupoEmpresarial.path'], nerv['reporte.grupoEmpresarial.archivo'])}"/>
+                                     actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.unidadLegal.path'], nerv['reporte.unidadLegal.archivo'])}"/>
                     <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/>
                     <p:blockUI block="@form" trigger="btnGenerarReporte" >
                         Generando reporte...<br />
