--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -15,7 +15,7 @@
                     <p:fileUpload fileUploadListener="#{MbAdministrarArchivo.subirArchivo}" multiple="false" fileLimitMessage="Número de archivos permitidos 1."
                                   mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
                                   invalidFileMessage="Tipo de archivo no soportado" 
-                               update="msnInforGruEmp" fileLimit="1" allowTypes="/(\.|\/)(xls)$/" />
+                               update="msnInforGruEmp" fileLimit="1" allowTypes="/(\.|\/)(xlsm)(xls)$/" />
 
                     <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/>
                     <p:blockUI block="@form" trigger="btnGenerarReporte" >
