Se modificó: Formularios, eliminación y adición de variables

--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
@@ -46,6 +46,9 @@
 
             <h:outputText value="NIT de la unidad legal involucrada: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
+            
+            <h:outputText value="Dígito de verificación: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Fecha de cierre de actividades: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
