--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-identificacion.xhtml
@@ -37,6 +37,9 @@
             <h:outputText value="Dirección del establecimiento: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
+            <h:outputText value="Indicativo teléfono: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            
             <h:outputText value="Teléfono: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
