--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
@@ -9,13 +9,9 @@
         <p:messages />
         <h:panelGrid columns="2" columnClasses="label, value">
 
-            <h:outputText value="Situación de control: " styleClass="etiquetaFormulario"/>
-            <p:selectOneMenu style="width:330px">
-                <f:selectItem itemLabel="Situación..." itemValue="" />
-                <f:selectItem itemLabel="Matriz" itemValue="Matriz" />
-                <f:selectItem itemLabel="Subordinada" itemValue="Subordinada" />
-            </p:selectOneMenu>
-
+            <h:outputText value="Matriz/Subordinada: " styleClass="etiquetaFormulario"/>
+            <p:inputSwitch onLabel="Matriz" offLabel="Subordinada"/>
+            
             <h:outputText value="Tipo de relación: " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Relación..." itemValue="" />
@@ -24,6 +20,9 @@
             </p:selectOneMenu>
 
             <h:outputText value="NIT de la controlante: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            
+            <h:outputText value="Dígito de verificación: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Nombre de la controlante: " styleClass="etiquetaFormulario"/>
