--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
@@ -9,26 +9,26 @@
         <p:messages />
         <h:panelGrid columns="2" columnClasses="label, value">
 
-            <h:outputText value="Matriz/Subordinada: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Matriz/Subordinada: *" styleClass="etiquetaFormulario"/>
             <p:inputSwitch onLabel="Matriz" offLabel="Subordinada"/>
             
-            <h:outputText value="Tipo de relación: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Tipo de relación: *" styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Relación..." itemValue="" />
                 <f:selectItem itemLabel="Filial" itemValue="Filial" />
                 <f:selectItem itemLabel="Subsidiaria" itemValue="Subsidiaria" />
             </p:selectOneMenu>
 
-            <h:outputText value="NIT de la controlante: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="NIT de la controlante: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
             
-            <h:outputText value="Dígito de verificación: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Dígito de verificación: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Nombre de la controlante: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Nombre de la controlante: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Porcentaje de participación de la controlante directa: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Porcentaje de participación de la controlante directa: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <!--h:outputText value="Saltar siguiente: " />
