--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
@@ -8,22 +8,24 @@
     <p:panel header="Información tamaño">
         <p:messages />
         <h:panelGrid columns="2" columnClasses="label, value">
-            <h:outputText value="Vigencia financiera: " styleClass="etiquetaFormulario" />
+            <!--
+            <h:outputText value="Información con corte a: " styleClass="etiquetaFormulario" />
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            -->
+
+            <h:outputText value="Actividad principal*: " styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Actividad principal: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Actividad secundaria: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Actividad secundaria: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Personal ocupado: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Personal ocupado: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Personal empleado: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Personal empleado: " styleClass="etiquetaFormulario" />
-            <p:inputText styleClass="valorEtiquetaFormulario"/>
-
-            <h:outputText value="Personal cotizante: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Personal cotizante: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Número de hombres: " styleClass="etiquetaFormulario" />
@@ -32,37 +34,37 @@
             <h:outputText value="Número de mujeres: " styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Activo: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Activo: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Pasivo: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Pasivo: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Patrimonio: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Patrimonio: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Ingresos operacionales: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Ingresos operacionales: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Utilidad bruta: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Utilidad bruta: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Gastos operacionales de administración: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Gastos operacionales de administración: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Gastos operacionales de venta: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Gastos operacionales de venta: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Gastos operacionales: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Gastos operacionales:* " styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Utilidad operativa: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Utilidad operativa: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="EBITDA: " styleClass="etiquetaFormulario" />
+            <h:outputText value="EBITDA: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Utilidad neta: " styleClass="etiquetaFormulario" />
+            <h:outputText value="Utilidad neta: *" styleClass="etiquetaFormulario" />
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Observaciones: " styleClass="etiquetaFormulario" />
