--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-identificacion.xhtml
@@ -9,16 +9,16 @@
         <p:messages />
         <h:panelGrid columns="2" columnClasses="label, value" >
 
-            <h:outputText value="Nombre del establecimiento: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Nombre del establecimiento: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Martícula mercantil del establecimiento: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Martícula mercantil del establecimiento: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Tipo de establecimiento: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Tipo de establecimiento: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Departamento: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Departamento: *" styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Departamento..." itemValue="" />
                 <f:selectItem itemLabel="Bogotá" itemValue="Bogotá" />
@@ -26,7 +26,7 @@
                 <f:selectItem itemLabel="Tolima" itemValue="Tolima" />
             </p:selectOneMenu>
 
-            <h:outputText value="Municipio: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Municipio: *" styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Municipio..." itemValue="" />
                 <f:selectItem itemLabel="A" itemValue="A" />
@@ -34,32 +34,32 @@
                 <f:selectItem itemLabel="C" itemValue="C" />
             </p:selectOneMenu>
 
-            <h:outputText value="Dirección del establecimiento: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Dirección del establecimiento: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Indicativo teléfono: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Indicativo teléfono: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
             
-            <h:outputText value="Teléfono: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Teléfono: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Estado: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Estado: *" styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Estado..." itemValue="" />
                 <f:selectItem itemLabel="Activa" itemValue="Activa" />
                 <f:selectItem itemLabel="Cancelada" itemValue="Cancelada" />
             </p:selectOneMenu>
 
-            <h:outputText value="Código de la actividad económica: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Código de la actividad económica: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="¿Es una actividad auxiliar?: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="¿Es una actividad auxiliar?: *" styleClass="etiquetaFormulario"/>
             <p:inputSwitch onLabel="Si" offLabel="No"/>
 
-            <h:outputText value="Otras actividades: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Otras actividades: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Es unidad auxiliar: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="El establecimiento es unidad auxiliar: *" styleClass="etiquetaFormulario"/>
             <p:inputSwitch onLabel="Si" offLabel="No"/>
 
             <!--h:outputText value="Saltar siguiente: " />
