--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -8,35 +8,35 @@
     <p:panel header="Información tamaño">
         <p:messages />
         <h:panelGrid columns="2" columnClasses="label, value">
-
+            <!--
             <h:outputText value="Información con corte a:: " styleClass="etiquetaFormulario"/>
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
-                        
-            <h:outputText value="Personal ocupado: " styleClass="etiquetaFormulario"/>
+            -->    
+            <h:outputText value="Personal ocupado: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Personal empleado: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Personal empleado: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Personal temporal: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Personal temporal: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <h:outputText value="Hombres ocupados: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Mjeres ocupadas: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Mujeres ocupadas: " styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Activos: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Activos: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="ingresos operacionales: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="ingresos operacionales: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Costo de ventas: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Costo de ventas: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Gastos operacionales: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="Gastos operacionales: *" styleClass="etiquetaFormulario"/>
             <p:inputText styleClass="valorEtiquetaFormulario"/>
 
         </h:panelGrid>
